--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
 body{
   font-family: 'Open Sans', sans-serif;
+  margin: 0%;
+}
+h1{
+  font-size: 35px;
+}
+.flexible-container{
+  display: flex;
+}
+.halfwidth{
+  width: 50%;
+}
+.halfwidth img{
+  width: 50%;
+  padding-left: 80px;
+}
+.intro{
+  padding-top: 65px;
+  padding-left: 120px;
+}
+#intro-heading{
+  padding-left: 8px;
+  border-radius: 2px;
+  border-left: 4px solid #FF5959;
+  
+}
+.link-button{
+  border-radius: 3px;
+  text-decoration: none;
+  color: white;
+  background-color: #FF5959;
+  padding: 10px 30px;
 }
