--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@ body{
 h1{
   font-size: 35px;
 }
-h3{
-  font-weight: 700px;
-}
 h2{
-  font-weight: 700px;
+  font-size: 25px;
+  font-weight: bold;
+}
+h4{
+  font-weight: bold;
 }
 .flexible-container{
   display: flex;
@@ -70,12 +71,44 @@ padding-top: 20px;
   background-color: #FFF4D6;
 }
 .learn-more{
-  padding-left: 150px;
-  margin-bottom: 130px;
+  background-image: url(images/shapes/shape-1.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: 200px;
+  margin-left: 75px;
+  padding-bottom: -5%;
+  padding-left: 140px;
+  margin-bottom: 80px;
 }
 .learnmore-img{
   margin-right: -230px;
+  margin-left: -70px;
 }
 .limit-text{
+  padding-top: 30px;
+  padding-left: 30px;
+}
+.community{
+  background-image: url(images/shapes/shape-1.png);
+  background-repeat: no-repeat;
+  background-position:right bottom;
+  background-size: 150px;
+  margin-right: 140px;
+  margin-left: 75px;
+  margin-bottom: 100px;
+  padding-right: 150px;
+  padding-left: 75px;
+  padding-bottom: -5%;
+}
+.community-text{
+  padding-top: 50px;
+  margin-right: -100px;
+}
+.community-img{
+  width: 65%;
+  padding-bottom: 50px;
+  padding-left: 150px;
+  margin-right: -400px;
+  margin-left: 200px;
 
 }
