--- a/style.css
+++ b/style.css
@@ -93,22 +93,71 @@ padding-top: 20px;
   background-repeat: no-repeat;
   background-position:right bottom;
   background-size: 150px;
-  margin-right: 140px;
+  margin-right: 200px;
+  margin-left: 75px;
+  margin-bottom: 80px;
+  padding-left: 75px;
+  padding-bottom: -5%;
+}
+.community-text{
+  padding-top: 50px;
+  margin-right: -1500px;
+}
+.community-img{
+  width: 50%;
+  margin-top: 10px;
+  margin-left: 1600px;
+  padding-left: 80px;
+  margin-bottom: 50px;
+  margin-right: -190px;
+
+}
+#contact-heading{
+  text-align: center;
+  margin-bottom: 100px;
+}
+.contact-area{
+  margin-right: 160px;
   margin-left: 75px;
   margin-bottom: 100px;
   padding-right: 150px;
   padding-left: 75px;
   padding-bottom: -5%;
 }
-.community-text{
-  padding-top: 50px;
-  margin-right: -100px;
+.contact-form{
+  padding-left: 50px;
 }
-.community-img{
-  width: 65%;
-  padding-bottom: 50px;
-  padding-left: 150px;
-  margin-right: -400px;
-  margin-left: 200px;
-
+.contact-name{
+  margin-bottom: 20px;
+  height: 35px;
+  width: 580px;
+}
+.contact-email{
+  margin-bottom: 20px;
+  height: 35px;
+  width: 580px;
+}
+.contact-message{
+  height: 160px;
+  width: 580px;
+}
+.submit-button{
+  font-weight: 600;
+  border-color: #FFAD5A;
+  border-radius: 30px;
+  text-decoration: none;
+  color: white;
+  background-color: #FFAD5A;
+  padding: 10px 40px;
+}
+#submit{
+  font-size: medium;
+  margin-top: 20px;
+  margin-left: 240px;
+}
+.footer{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #0B0D17;
+  text-align: center; 
 }
